refactor(exec): adopt new handler interfaces